# OmniEvalKit

./: .gitignore  pyproject.toml  requirement.txt
configs/model_config/: minicpmo45_batch_1poolstep.json
docs/reference/: SUPPORTED_MODELS.md
o_e_Kit/configs/: duplex_configs.json  generation_configs.json
o_e_Kit/datasets/: DATASET_INTEGRATION_GUIDE.md  __init__.py  omniduplexeval_dataset.py
o_e_Kit/models/gemma4/: __init__.py  gemma4_omni.py
o_e_Kit/models/minicpm/: minicpmo.py
o_e_Kit/models/minicpm/demo/: duplex_runner.py
o_e_Kit/models/qwen/: qwen3_omni.py
o_e_Kit/utils/: dataset_loader.py  evaluation_runner.py  model_loader.py  omniduplexeval_inference.py
o_e_Kit/utils/args/: dataset_args.py  model_args.py
o_e_Kit/utils/metrics/: evaluator_base.py  evaluator_mqa.py  llm_call_new.py  omni_llm_eval.py
scripts/: download-datasets.sh  download_gigaspeech.py  eval_omniduplexeval.sh  example_eval.sh  hf_download.py  omnievalkit-streamingbench.sh  omnievalkit.sh  parquet_to_jsonl.py  test-slurm-job-omnievalkit.sh
